Ajustando os botões de teste de consulta e adicionando service para consulta às APIs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <br>
     <button type="button" (click)="buscarFilme()">Buscar Filme</button>
     <br>
-    <button type="button" onclick="buscarSerie()">Buscar Série</button>
+    <button type="button" (click)="buscarSerie()">Buscar Série</button>
     <br>
-    <button type="button" onclick="buscarJogo()">Buscar Jogo</button>
+    <button type="button" (click)="buscarJogo()">Buscar Jogo</button>
 </div>
